Views Calendar 5.x
==================

Version 5.2 dev
===============

- #336567 Add extra test for valid values to date processing to avoid fatal error on empty property.
- #337209 Add configuration option for new function to truncate long text in calendar cells.

Version 5.2.4
===============

- Set day-splitting timezone to be sure it will split days using the time displayed in the calendar.
- Adapt processing to make sure only selected dates display in nodes, views, and calendars.
- Add option to maximum items per day to either show maximum plus 'more' link or hide all and link to day.
- #324061, #324701 Revert the calendar_colorpicker.js back to the D5 version, it got switched to the D6 version accidentally.
- Adjust the recent changes to the navigation header to be sure only the calendar header and not the date browser is affected.
- #292164 Keep calendar date selector description from floating out of block in IE.
- #298929 Fix code so that calendar legend doesn't display empty div when empty.
- Make some fixes to the calendar legend to be sure text added for accessibility stays invisible in all themes.
- Rework html of Year view so month titles will match block view month title for easier css themeing.
- #323265 Add year as well as month to calendar titles.
- #319344 Add 'empty' class and updated css styles provided by MothersClick.com.
- #319344 Add method of truncating title and other fields in calendar cells.
- #174580 Add min/max year setting to Date argument and set Page Not Found outside that range.
- #174580 Add rel=nofollow to back/next links.
- #319344 Add method of limiting the number of events that display in calendar cells.
- #310262 Add missing parameter to calendar_build_nodes() in calendar ical.
- #314682 Add missing url() in jcalendar js code.
- #311839 Fix permissions to see header and empty text.
- #313161 Use date_id as iCal UID to be sure it is unique.
- #306328 Fix one more embedded link for the week number.