@@ -194,7 +194,7 @@ table .mini-day-on a {
 /* formatting for the legend stripe and block */
 .calendar-calendar .stripe {
   height: 5px;
-  width: 96%;
+  width: auto;
   font-size:1px !important;
   line-height:1px !important;
 }
@@ -289,8 +289,11 @@ table.calendar-legend tr.even .stripe {
 .calendar-calendar td .inner div a {
   background:#eee;
 }
+/* Set small font size for all items in calendar div, themes can override this. */
+/* Use x-small instead of em to avoid multiplying effect in nested items. */
 .calendar-calendar div.calendar {
   border:none;
+  font-size:x-small;
 }
 .calendar-calendar td .inner div.calendar div,
 .calendar-calendar td .inner div.calendar div a {
@@ -302,7 +305,6 @@ table.calendar-legend tr.even .stripe {
 .calendar-calendar td .inner div.calendar div.calendar-more a {
   background:#fff;
   text-align:right;
-  width:96%;
 }
 
 .calendar-calendar td .inner div a,
@@ -312,7 +314,6 @@ table.calendar-legend tr.even .stripe {
 .calendar-calendar td span.date-display-separator {
   color:#444;
   font-weight:normal;
-  font-size:0.85em;
 }
 .calendar-calendar td span.date-display-single,
 .calendar-calendar td span.date-display-start,
